# mcgill_drone

drone_ws/src/planner/: package.xml  setup.py
drone_ws/src/planner/planner/: path_planner.py
